--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
@@ -21,7 +22,9 @@
     "@storybook/react": "^5.3.19",
     "@types/node": "^14.0.21",
     "@types/react": "^16.9.41",
+    "@types/styled-components": "^5.1.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "fork-ts-checker-webpack-plugin": "^5.0.7",
     "ts-loader": "^8.0.0",
     "typescript": "^3.9.6"
