feat: create predict page to estimate survival chances

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "formik": "^2.1.4",
+    "lodash": "^4.17.19",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
