--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/yup": "^0.29.3",
     "formik": "^2.1.4",
     "lodash": "^4.17.19",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
