--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fork-ts-checker-webpack-plugin": "^5.0.7",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
     "sort-package-json": "^1.44.0",
     "ts-loader": "^8.0.0",
     "typescript": "^3.9.6"
