--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "formik": "^2.1.4",
     "lodash": "^4.17.19",
     "next": "9.4.4",
+    "next-auth": "^2.2.0",
+    "node-fetch": "^2.6.0",
+    "query-string": "^6.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1",
